Revert "Added new messages types..."
This reverts commit 9a1110e0fa5f7201824eb01d5d0b49068ba06481.

--- a/proj/Makefile
+++ b/proj/Makefile
@@ -1,12 +1,9 @@
 COMPONENT=CollarAppC
-BUILD_EXTRA_DEPS = LocationMsg.py CheckFoodMsg.py UpdateAnimalFoodMsg.py UpdateFeedingSpotMsg.py
-CLEAN_EXTRA = LocationMsg.py CheckFoodMsg.py UpdateAnimalFoodMsg.py UpdateFeedingSpotMsg.py LocationMsg.pyc CheckFoodMsg.pyc UpdateAnimalFoodMsg.pyc UpdateFeedingSpotMsg.pyc
+BUILD_EXTRA_DEPS = RadioMsg.py
+CLEAN_EXTRA = RadioMsg.py RadioMsg.pyc
 
-LocationMsg.py: RadioMsg.h
-	mig python -target=$(PLATFORM) $(CFLAGS) -python-classname=LocationMsg RadioMsg.h location_msg -o $@
-	
-FoodMsg.py: RadioMsg.h
-	mig python -target=$(PLATFORM) $(CFLAGS) -python-classname=FoodMsg RadioMsg.h food_msg -o $@
-	
+RadioMsg.py: RadioMsg.h
+	mig python -target=$(PLATFORM) $(CFLAGS) -python-classname=RadioMsg RadioMsg.h radio_msg -o $@
+
 include $(MAKERULES)
 
